--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h2>포트폴리오</h2>
     <ol>
       <!-- 포트폴리오 링크 리스트 -->
-      <li><a href="http://www.gdu.co.kr">구디아카데미</a>
+      <li><a href="http://52.78.42.88/orangePoolvilla/all/homeController">오렌지 풀빌라</a>
     </ol>
   </body>
 </html>
