--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/p1.jpg" alt="" style="width: 165px; height: 214px;" />
+                <img class="profile" src="assets/images/temp.jpg" alt="" style="width: 165px; height: 214px;" /> <!-- src 이 부분에 사진 -->
                 <h1 class="name">장주현</h1>
                 <h3 class="tagline">신입 개발자</h3>
             </div>
@@ -38,7 +38,7 @@
                     <li class="email"><i class="fas fa-envelope"></i>josiah5184510@naver.com</li>
                     <li class="phone"><i class="fas fa-phone"></i>***-****-****</li>
                     <li class="website"><i class="fas fa-globe"></i><a href="" target="_blank"
-                            style="text-decoration:none ;">Project List</a></li>
+                            style="text-decoration:none ;">Project List</a></li> <!-- a href 이 부분에 아마존 인덱스 페이지-->
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/jawsjosiah"
                             target="_blank" style="text-decoration:none ;">github.com/jawsjosiah</a></li>
                 </ul>
@@ -84,7 +84,7 @@
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Introduce</h2>
                 <div class="summary">
                     <p>일신우일신.</p>
-                    <p>내가 지금 하고 있는 것들을 꾸준히 어제 보다 더 나은 내가 되기 위해 노력하는 것만큼 삶에 있어서 멋지고 중요한 일은 없다고 생각합니다</p>
+                    <p>어제 보다 더 나은 내가 되기 위해 노력하는 것만큼 삶에 있어서 멋지고 중요한 일은 없다고 생각합니다</p>
                     <p><strong>남보다도 잘하고 어제의 나보다도 발전해 있는 사람이 되겠습니다</strong></p>
                 </div>
                 <!--//summary-->
@@ -202,25 +202,24 @@
             <h3><i class="far fa-file-code"></i>&nbsp;PROJECTS</h3>
             <br>
             <section class="section projects-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-users"></i></span>(팀프로젝트)여행지를 찾는
-                    숙소/체험 예약 사이트(진행중)</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-users"></i></span>(팀 프로젝트)LMS(진행중)</h2>
                 <div class="item">
                     <div class="project-type">
                         <a href="https://docs.google.com/spreadsheets/d/1omXC62yiNCdB0oUPJnn-LmAC_HoI1sQIrzBtgTEbUl8"
                             target="_blank"><button class="btn btn-outline-secondary btn-sm"
-                                disabled="disabled">요구사항정의서</button></a>
+                                disabled="disabled">요구 사항 정의서</button></a>
                         <button type="button" class="btn btn-outline-secondary btn-sm"
-                            onclick="window.open('img/ERD.png')">ERD</button>
-                        <a href="https://github.com/playthess/voyage" target="_blank"><button
+                            onclick="window.open('img/ERD.png')">ERD</button> <!-- ERD 수정해서 업로드 ~ -->
+                        <a href="https://github.com/jawsjosiah" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
-                        <a href="http://52.79.208.222/voyage/index" target="_blank"><button
+                        <a href="http://52.78.42.88" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm" disabled="disabled"><i
                                     class="fab fa-gratipay"></i>프로젝트(AWS)</button></a>
                     </div>
                     <br>
                     <div class="project-type project-title">개발기간</div>
                     <u1>
-                        <li class="project-type">21.12 ~ 진행중</li>
+                        <li class="project-type">22.06 ~ 진행중</li>
                     </u1>
                     <br>
                     <div class="project-type project-title">개발환경</div>
@@ -240,42 +239,42 @@
                     </ul>
                     <br>
                     <div class="project-type project-title">CONTENTS</div>
-                    <span class="project-tagline">여행지를 선택할때 주변 숙소와 체험까지 동시에 예약할 수 있는 사이트입니다 </span>
+                    <span class="project-tagline">LMS </span>
                 </div>
                 <!--//item-->
             </section>
             <!--//section-->
             <hr>
             <section class="section projects-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-users"></i></span>(팀프로젝트)여행지를 찾는
-                    숙소/체험 예약 사이트(진행중)</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-users"></i></span>(팀 프로젝트) 풀빌라
+                   예약 사이트(진행중)</h2>
                 <div class="item">
                     <div class="project-type">
                         <a href="https://docs.google.com/spreadsheets/d/1omXC62yiNCdB0oUPJnn-LmAC_HoI1sQIrzBtgTEbUl8"
                             target="_blank"><button class="btn btn-outline-secondary btn-sm"
-                                disabled="disabled">요구사항정의서</button></a>
+                                disabled="disabled">요구 사항 정의서</button></a>
                         <button type="button" class="btn btn-outline-secondary btn-sm"
                             onclick="window.open('img/ERD.png')">ERD</button>
-                        <a href="https://github.com/playthess/voyage" target="_blank"><button
+                        <a href="https://github.com/jawsjosiah" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
-                        <a href="http://52.79.208.222/voyage/index" target="_blank"><button
+                        <a href="http://52.78.42.88" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm" disabled="disabled"><i
                                     class="fab fa-gratipay"></i>프로젝트(AWS)</button></a>
                     </div>
                     <br>
                     <div class="project-type project-title">개발기간</div>
                     <u1>
-                        <li class="project-type">21.12 ~ 진행중</li>
+                        <li class="project-type">22.5 ~ 진행중</li>
                     </u1>
                     <br>
                     <div class="project-type project-title">개발환경</div>
                     <ul>
                         <li class="project-type">OS - Window 10</li>
                         <li class="project-type">Language - Java(openJDK 11.0.13), JavaScript, HTML5, CSS3</li>
-                        <li class="project-type">Library & Module - Spring Boot, jstl, jQuery, AJAX, Apache Tomcat9,
-                            Servlet, MyBatis, Lombok</li>
+                        <li class="project-type">Library & Module - jstl, jQuery, Apache Tomcat9,
+                            Servlet, MyBatis</li>
                         <li class="project-type">Database - MariaDB, HeidiSQL</li>
-                        <li class="project-type">IDE - STS(v.4.10)</li>
+                        <li class="project-type">IDE - Eclipse (21.06)</li>
                     </ul>
                     <br>
                     <div class="project-type project-title">서비스 환경</div>
@@ -285,20 +284,20 @@
                     </ul>
                     <br>
                     <div class="project-type project-title">CONTENTS</div>
-                    <span class="project-tagline">여행지를 선택할때 주변 숙소와 체험까지 동시에 예약할 수 있는 사이트입니다 </span>
+                    <span class="project-tagline">날짜와 지역을 선택해 검색하면 예약 가능한 풀빌라가 나오는 사이트입니다. </span>
                 </div>
                 <!--//item-->
             </section>
             <!--//section-->
             <hr>
             <section class="section projects-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>캘린더 형식의 일정관리 프로그램
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>캘린더 형식의 가계부 프로그램
                 </h2>
                 <div class="item">
                     <div class="project-type">
-                        <a href="https://github.com/playthess/todo" target="_blank"><button
+                        <a href="https://github.com/jawsjosiah" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
-                        <a href="http://52.79.208.222/todo/login" target="_blank"><button
+                        <a href="http://52.78.42.88" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i
                                     class="fas fa-calendar"></i>프로젝트(AWS)</button></a>
                     </div>
@@ -311,11 +310,11 @@
                     <div class="project-type project-title">개발환경</div>
                     <ul>
                         <li class="project-type">OS - Window 10</li>
-                        <li class="project-type">Language - Java(OPEN JDK1.8), JavaScript, HTML5, CSS3</li>
-                        <li class="project-type">Library & Module - Spring Boot(v2.4.5), jQuery, AJAX, Apache Tomcat9,
-                            Servlet(v4.0), JSP(v2.3), EL(v3.0), Maven(v4.0), MyBatis(v2.1.4), lombok(v1.18.20)</li>
+                        <li class="project-type">Language - Java(OPEN JDK11), JavaScript, HTML5, CSS3</li>
+                        <li class="project-type">Library & Module - jQuery, Apache Tomcat9,
+                            Servlet(v4.0), JSP(v2.3), EL(v3.0)</li>
                         <li class="project-type">Database - MariaDB(v10.5), HeidiSQL</li>
-                        <li class="project-type">IDE - STS(v.4.10)</li>
+                        <li class="project-type">IDE - Eclipse</li>
                     </ul>
                     <br>
                     <div class="project-type project-title">서비스 환경</div>
@@ -325,9 +324,10 @@
                     </ul>
                     <br>
                     <div class="project-type project-title">CONTENTS</div>
-                    <span class="project-tagline">테스트 데이터를 직접 생성하여 간단한 DB를 사용 Model2 방식으로 구현했으며
-                        <br>bootstrap을 사용하여 간단한 디자인을 했습니다.
-                        <br>회원은 날짜별로 일정을 추가, 수정, 삭제가 가능하고 관리자는 공지사항을 추가, 수정, 삭제 할 수 있습니다.
+                    <span class="project-tagline">테스트 데이터를 직접 생성하여 DB 데이터로 사용했습니다.
+                        <br> Model2 방식으로 구현했으며
+                        <br>bootstrap을 사용하여 간단한 디자인 작업을 했습니다.
+                        <br>회원은 날짜별로 수입, 지출에 대해 추가, 수정, 삭제를 할 수 있습니다. 
                     </span>
                 </div>
                 <!--//item-->
