--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <ul class="list-unstyled interests-list">
                     <li>프로그래밍</li>
                     <li>웨이트 트레이닝</li>
+                    <li>주짓수</li>
                 </ul>
             </div>
             <!--//interests-->
@@ -255,9 +256,9 @@
                                 disabled="disabled">요구 사항 정의서</button></a>
                         <button type="button" class="btn btn-outline-secondary btn-sm"
                             onclick="window.open('img/ERD.png')">ERD</button>
-                        <a href="https://github.com/jawsjosiah" target="_blank"><button
+                        <a href="https://github.com/richOrange/orangePoolvilla" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
-                        <a href="http://52.78.42.88" target="_blank"><button
+                        <a href="http://52.78.42.88/orangePoolvilla/all/homeController" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm" disabled="disabled"><i
                                     class="fab fa-gratipay"></i>프로젝트(AWS)</button></a>
                     </div>
@@ -295,7 +296,7 @@
                 </h2>
                 <div class="item">
                     <div class="project-type">
-                        <a href="https://github.com/jawsjosiah" target="_blank"><button
+                        <a href="https://github.com/jawsjosiah/cashbook_re" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
                         <a href="http://52.78.42.88" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i
@@ -304,7 +305,7 @@
                     <br>
                     <div class="project-type project-title">개발기간</div>
                     <ul>
-                        <li class="project-type">21.10</li>
+                        <li class="project-type">22.</li>
                     </ul>
                     <br>
                     <div class="project-type project-title">개발환경</div>
@@ -348,15 +349,15 @@
                     <br>
                     <div class="project-type project-title">개발기간</div>
                     <ul>
-                        <li class="project-type">22.02</li>
+                        <li class="project-type">22.02 ~ 22.03</li>
                     </ul>
                     <br>
-                    <div class="project-type project-title">개발환경</div>
+                    <div class="project-type project-title">개발 환경</div>
                     <ul>
                         <li class="project-type">OS - Window 10</li>
                         <li class="project-type">Language - Java(OPEN JDK11), HTML5, CSS3</li>
-                        <li class="project-type">Library & Module - Apache Tomcat9, Servlet(v4.0), JSP(v2.3)</li>
-                        <li class="project-type">Database - MariaDB(v10.5), HeidiSQL</li>
+                        <li class="project-type">Library & Module - BootStrap, cos.jar, Apache Tomcat9, Servlet(v4.0), JSP(v2.3)</li>
+                        <li class="project-type">Database - MariaDB(v10.5), HeidiSQL(v11.3.0)</li>
                         <li class="project-type">IDE - Eclipse</li>
                     </ul>
                     <br>
@@ -367,8 +368,10 @@
                     </ul>
                     <br>
                     <div class="project-type project-title">CONTENTS</div>
-                    <span class="project-tagline">교육 한 달 차에 배운 Model1 방식의 블로그 웹 서비스 입니다.
-                        <br>
+                    <span class="project-tagline">Model1 방식의 블로그 웹 서비스 입니다.
+                        <br>bootstrap을 사용하여 간단한 디자인 작업을 했습니다.
+                        <br>사진, 파일을 추가, 삭제할 수 있고
+                        <br>게시판 글, 방명록에 대해 추가, 수정, 삭제할 수 있습니다. 
                     </span>
                 </div>
                 <!--//item-->
