--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/temp.jpg" alt="" style="width: 165px; height: 214px;" /> <!-- src 이 부분에 사진 -->
+                <img class="profile" src="assets/images/me.jpg" alt="" style="width: 165px; height: 214px;" /> <!-- src 이 부분에 사진 -->
                 <h1 class="name">장주현</h1>
                 <h3 class="tagline">신입 개발자</h3>
             </div>
