--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <ul class="list-unstyled interests-list">
                     <li>프로그래밍</li>
                     <li>웨이트 트레이닝</li>
-                    <li>주짓수</li>
+                    <li>그래플링</li>
                 </ul>
             </div>
             <!--//interests-->
@@ -86,7 +86,7 @@
                 <div class="summary">
                     <p>일신우일신.</p>
                     <p>어제 보다 더 나은 내가 되기 위해 노력하는 것만큼 삶에 있어서 멋지고 중요한 일은 없다고 생각합니다</p>
-                    <p><strong>남보다도 잘하고 어제의 나보다도 발전해 있는 사람이 되겠습니다</strong></p>
+                    <p><strong>어제의 나보다 발전해 있는 사람이 되겠습니다</strong></p>
                 </div>
                 <!--//summary-->
             </section>
@@ -203,14 +203,14 @@
             <h3><i class="far fa-file-code"></i>&nbsp;PROJECTS</h3>
             <br>
             <section class="section projects-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-users"></i></span>(팀 프로젝트)LMS(진행중)</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-users"></i></span>(팀 프로젝트) LMS (진행중)</h2>
                 <div class="item">
                     <div class="project-type">
-                        <a href="https://docs.google.com/spreadsheets/d/1omXC62yiNCdB0oUPJnn-LmAC_HoI1sQIrzBtgTEbUl8"
+                        <a href=""
                             target="_blank"><button class="btn btn-outline-secondary btn-sm"
                                 disabled="disabled">요구 사항 정의서</button></a>
                         <button type="button" class="btn btn-outline-secondary btn-sm"
-                            onclick="window.open('img/ERD.png')">ERD</button> <!-- ERD 수정해서 업로드 ~ -->
+                            onclick="window.open('')">ERD</button> <!-- ERD 수정해서 업로드 ~ -->
                         <a href="https://github.com/jawsjosiah" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
                         <a href="http://52.78.42.88" target="_blank"><button
@@ -248,14 +248,14 @@
             <hr>
             <section class="section projects-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-users"></i></span>(팀 프로젝트) 풀빌라
-                   예약 사이트(진행중)</h2>
+                   예약 사이트 (진행중)</h2>
                 <div class="item">
                     <div class="project-type">
-                        <a href="https://docs.google.com/spreadsheets/d/1omXC62yiNCdB0oUPJnn-LmAC_HoI1sQIrzBtgTEbUl8"
+                        <a href="https://docs.google.com/spreadsheets/d/1HSL9sp1wo033rS6iE1I32CvG6ZkK9vBi/edit#gid=2112345441"
                             target="_blank"><button class="btn btn-outline-secondary btn-sm"
                                 disabled="disabled">요구 사항 정의서</button></a>
                         <button type="button" class="btn btn-outline-secondary btn-sm"
-                            onclick="window.open('img/ERD.png')">ERD</button>
+                            onclick="window.open('img/orangePoolvillaERD.png')">ERD</button>
                         <a href="https://github.com/richOrange/orangePoolvilla" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
                         <a href="http://52.78.42.88/orangePoolvilla/all/homeController" target="_blank"><button
@@ -298,14 +298,14 @@
                     <div class="project-type">
                         <a href="https://github.com/jawsjosiah/cashbook_re" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
-                        <a href="http://52.78.42.88" target="_blank"><button
+                        <a href="http://52.78.42.88/cashBookListByMonthController" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i
                                     class="fas fa-calendar"></i>프로젝트(AWS)</button></a>
                     </div>
                     <br>
                     <div class="project-type project-title">개발기간</div>
                     <ul>
-                        <li class="project-type">22.</li>
+                        <li class="project-type">22.04 ~ 22.05</li>
                     </ul>
                     <br>
                     <div class="project-type project-title">개발환경</div>
@@ -336,13 +336,54 @@
             <!--//section-->
             <hr>
             <section class="section projects-section">
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>DVD 대여점 
+                    </h2>
+                <div class="item">
+                    <div class="project-type">
+                        <a href="https://github.com/jawsjosiah/sakila" target="_blank"><button
+                                class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
+                        <a href="http://52.78.42.88/sakila/index.jsp" target="_blank"><button
+                                class="btn btn-outline-secondary btn-sm"><i
+                                    class="fas fa-book"></i>프로젝트(AWS)</button></a>
+                    </div>
+                    <br>
+                    <div class="project-type project-title">개발기간</div>
+                    <ul>
+                        <li class="project-type">22.03 ~ 22.04</li>
+                    </ul>
+                    <br>
+                    <div class="project-type project-title">개발 환경</div>
+                    <ul>
+                        <li class="project-type">OS - Window 10</li>
+                        <li class="project-type">Language - Java(OPEN JDK11), HTML5, CSS3</li>
+                        <li class="project-type">Library & Module - BootStrap, Apache Tomcat9, Servlet(v4.0), JSP(v2.3)</li>
+                        <li class="project-type">Database - MariaDB(v10.5), HeidiSQL(v11.3.0)</li>
+                        <li class="project-type">IDE - Eclipse</li>
+                    </ul>
+                    <br>
+                    <div class="project-type project-title">서비스 환경</div>
+                    <ul>
+                        <li class="project-type">Platform - AWS Lightsail</li>
+                        <li class="project-type">OS - Ubuntu16.04</li>
+                    </ul>
+                    <br>
+                    <div class="project-type project-title">CONTENTS</div>
+                    <span class="project-tagline">Model1 방식의 DVD 대여점 데이터를 확인하는 웹 서비스 입니다.
+                        <br>bootstrap을 사용하여 간단한 디자인 작업을 했습니다.
+                        <br>
+                    </span>
+                </div>
+                <!--//item-->
+            </section>
+            <hr>
+            <section class="section projects-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>블로그
                     </h2>
                 <div class="item">
                     <div class="project-type">
                         <a href="https://github.com/jawsjosiah/blog" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
-                        <a href="" target="_blank"><button
+                        <a href="http://52.78.42.88/blog/index.jsp" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i
                                     class="fas fa-book"></i>프로젝트(AWS)</button></a>
                     </div>
