--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <br>
                     <div class="project-type project-title">개발기간</div>
                     <u1>
-                        <li class="project-type">22.5 ~ 진행중</li>
+                        <li class="project-type">22.05 ~ 진행중</li>
                     </u1>
                     <br>
                     <div class="project-type project-title">개발환경</div>
@@ -285,7 +285,11 @@
                     </ul>
                     <br>
                     <div class="project-type project-title">CONTENTS</div>
-                    <span class="project-tagline">날짜와 지역을 선택해 검색하면 예약 가능한 풀빌라가 나오는 사이트입니다. </span>
+                    <span class="project-tagline">날짜와 지역을 선택해 검색하면 예약 가능한 풀빌라가 나오는 사이트입니다. 
+                        <br> Model2 방식으로 구현했으며
+                        <br> bootstrap을 사용하여 간단한 디자인 작업을 했습니다.
+                        <br> jQuery를 사용하여 폼 유효성 검증을 진행했습니다. 
+                    </span>
                 </div>
                 <!--//item-->
             </section>
@@ -298,7 +302,7 @@
                     <div class="project-type">
                         <a href="https://github.com/jawsjosiah/cashbook_re" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
-                        <a href="http://52.78.42.88/cashbook01/cashBookListByMonthController" target="_blank"><button
+                        <a href="http://52.78.42.88/cashbook01/loginController" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i
                                     class="fas fa-calendar"></i>프로젝트(AWS)</button></a>
                     </div>
