--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <!--//meta-->
                     <div class="details">
-                        <p>현업에서 실제로 사용되는 기술을 배워보고 팀 프로젝트 경험을 쌓기위해 교육훈련에 참여하였습니다.</p>
+                        <p>현업에서 실제로 사용되는 기술을 배워보고 팀 프로젝트 경험을 쌓기 위해 교육훈련에 참여하였습니다.</p>
                     </div>
                     <!--//details-->
                 </div>
@@ -123,7 +123,7 @@
                     </div>
                     <!--//meta-->
                     <div class="details">
-                        <p>컴퓨터공학에 대해 학문적으로 공부해보고자 스마트IT소프트웨어과에 진학하여 html, css, java, sql, DB 등을 공부했습니다.</p>
+                        <p>컴퓨터공학에 대해 학문적으로 공부해 보고자 스마트IT소프트웨어과에 진학하여 html, css, java, sql, DB 등을 공부했습니다.</p>
                     </div>
                     <!--//details-->
                 </div>
@@ -143,7 +143,7 @@
                     </div>
                     <!--//meta-->
                     <div class="details">
-                        <p>다양한 API활용, 문제 해결 능력</p>
+                        <p>다양한 API 활용, 문제 해결 능력</p>
                     </div>
                     <!--//details-->
                 </div>
@@ -253,13 +253,13 @@
                     <div class="project-type">
                         <a href="https://docs.google.com/spreadsheets/d/1HSL9sp1wo033rS6iE1I32CvG6ZkK9vBi/edit#gid=2112345441"
                             target="_blank"><button class="btn btn-outline-secondary btn-sm"
-                                disabled="disabled">요구 사항 정의서</button></a>
+                                >요구 사항 정의서</button></a>
                         <button type="button" class="btn btn-outline-secondary btn-sm"
                             onclick="window.open('img/orangePoolvillaERD.png')">ERD</button>
                         <a href="https://github.com/richOrange/orangePoolvilla" target="_blank"><button
                                 class="btn btn-outline-secondary btn-sm"><i class="fab fa-github"></i>깃허브</button></a>
                         <a href="http://52.78.42.88/orangePoolvilla/all/homeController" target="_blank"><button
-                                class="btn btn-outline-secondary btn-sm" disabled="disabled"><i
+                                class="btn btn-outline-secondary btn-sm" ><i
                                     class="fab fa-gratipay"></i>프로젝트(AWS)</button></a>
                     </div>
                     <br>
