--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     <div class="project-type project-title">CONTENTS</div>
                     <span class="project-tagline">Model1 방식의 DVD 대여점 데이터를 확인하는 웹 서비스 입니다.
                         <br>bootstrap을 사용하여 간단한 디자인 작업을 했습니다.
-                        <br>
+                        <br>통계 확인, 검색이 가능한 것이 특징입니다.
                     </span>
                 </div>
                 <!--//item-->
