--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fas fa-envelope"></i>josiah5184510@naver.com</li>
                     <li class="phone"><i class="fas fa-phone"></i>***-****-****</li>
-                    <li class="website"><i class="fas fa-globe"></i><a href="" target="_blank"
-                            style="text-decoration:none ;">Project List</a></li> <!-- a href 이 부분에 아마존 인덱스 페이지-->
+                    <li class="website"><i class="fas fa-globe"></i><a href="https://www.youtube.com/watch?v=blvvxBs7BIo" target="_blank"
+                            style="text-decoration:none ;">YouTube</a></li> <!-- a href 이 부분에 아마존 인덱스 페이지-->
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/jawsjosiah"
                             target="_blank" style="text-decoration:none ;">github.com/jawsjosiah</a></li>
                 </ul>
